<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.uday.vero.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/vero"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/your_perfect_rental_place"
            android:textColor="#fff"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="260dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonstylegreen"
                android:text="@string/sign_up"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonstyle2"
                android:text="@string/log_in"
                android:textColor="#fff" />
        </LinearLayout>

</LinearLayout>
